@@ -1,6 +1,2 @@
 --enable-preview
--Djdk.tracePinnedThreads=full
--XX:+MaxFDLimit
--XX:+UseG1GC 
--Xms4G 
--Xmx4G
+
